--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "matchers",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "./src/js/index.js",
   "directories": {
     "test": "test"
   },
